Add Amazon purchase link

--- a/index.html
+++ b/index.html
@@ -757,9 +757,11 @@
     
     <!-- 購入ボタン（固定表示） -->
     <div class="purchase-container">
-        <button class="purchase-button" id="purchaseButton">
-            <i class="fas fa-shopping-cart"></i> 今すぐ購入する
-        </button>
+        <a href="https://amzn.asia/d/0iZfXJh" target="_blank" rel="noopener noreferrer">
+            <button class="purchase-button" id="purchaseButton">
+                <i class="fas fa-shopping-cart"></i> 今すぐ購入する
+            </button>
+        </a>
     </div>
     
     <!-- JavaScript -->
